Fixed spacing of some of the profile elements

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -20,3 +20,9 @@
         max-width: 201px;
     }
 }
+
+@media screen and (max-width: 490px){
+    .profile__subtitle{
+        margin-left: 0;
+    }
+}
